# r2d2-odbc

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml
examples/: connect.rs
src/: lib.rs
tests/: test.rs
travis/: odbc.ini
