[package]
name = "r2d2_odbc"
version = "0.4.1"
authors = ["Konstantin Salikhov <koka58@yandex.ru>"]
license = "MIT"
description = "ODBC support for the r2d2 connection pool"
repository = "https://github.com/Koka/r2d2-odbc"
documentation = "https://docs.rs/r2d2_odbc"
homepage = "https://github.com/Koka/r2d2-odbc"
keywords = ["odbc", "sql", "pool", "database", "r2d2"]
categories = ["database"]

[lib]
name = "r2d2_odbc"
path = "src/lib.rs"
test = false

[[test]]
name = "test"
path = "tests/test.rs"

[dependencies]
lazy_static = "1.0"
r2d2 = "0.8"
odbc = "0.16"
odbc-safe = "0.5"

[badges]
travis-ci = { repository = "Koka/r2d2-odbc", branch = "master" }
appveyor = { repository = "Koka/r2d2-odbc", branch = "master" }
